@@ -244,10 +244,10 @@ class StickiesControllerTest < ActionController::TestCase
   end
 
   test "should update sticky in a group and not shift the remaining stickies" do
-    put :update, id: stickies(:grouped_one).to_param, from_calendar: 1, sticky: { description: "Shifting sticky forward 5 days", project_id: stickies(:grouped_one).project_id, frame_id: stickies(:grouped_one).frame_id, completed: '0', due_date: "12/06/2011" }, shift: 'none'
+    put :update, id: stickies(:grouped_one).to_param, from_calendar: 1, sticky: { description: "Shifting sticky forward 5 days", project_id: stickies(:grouped_one).project_id, frame_id: stickies(:grouped_one).frame_id, completed: '0', due_date: "12/06/2011" }, shift: 'single'
     assert_not_nil assigns(:sticky)
     assert_equal Date.strptime('12/06/2011', '%m/%d/%Y'), assigns(:sticky).due_date
-    assert_equal ['2011-12-02', '2011-12-03', '2011-12-04', '2011-12-05'], assigns(:sticky).group.stickies.where("stickies.id != ?", assigns(:sticky).to_param).order('due_date').collect{|s| s.due_date.strftime('%Y-%m-%d')}
+    assert_equal ['', '2011-12-02', '2011-12-03', '2011-12-04', '2011-12-05'], assigns(:sticky).group.stickies.where("stickies.id != ?", assigns(:sticky).to_param).order('due_date').collect{|s| s.due_date.blank? ? '' : s.due_date.strftime('%Y-%m-%d')}
     assert_redirected_to calendar_stickies_path(selected_date: assigns(:sticky).due_date.blank? ? '' : assigns(:sticky).due_date.strftime('%m/%d/%Y'))
   end
 
@@ -255,8 +255,8 @@ class StickiesControllerTest < ActionController::TestCase
     put :update, id: stickies(:grouped_one).to_param, from_calendar: 1, sticky: { description: "Shifting sticky forward 5 days", project_id: stickies(:grouped_one).project_id, frame_id: stickies(:grouped_one).frame_id, completed: '0', due_date: "12/06/2011" }, shift: 'incomplete'
     assert_not_nil assigns(:sticky)
     assert_equal Date.strptime('12/06/2011', '%m/%d/%Y'), assigns(:sticky).due_date
-    assert_equal ['2011-12-02'], assigns(:sticky).group.stickies.where("stickies.id != ?", assigns(:sticky).to_param).where(completed: true).order('due_date').collect{|s| s.due_date.strftime('%Y-%m-%d')}    
-    assert_equal ['2011-12-08', '2011-12-09', '2011-12-10'], assigns(:sticky).group.stickies.where("stickies.id != ?", assigns(:sticky).to_param).where(completed: false).order('due_date').collect{|s| s.due_date.strftime('%Y-%m-%d')}
+    assert_equal ['2011-12-02'], assigns(:sticky).group.stickies.where("stickies.id != ?", assigns(:sticky).to_param).where(completed: true).order('due_date').collect{|s| s.due_date.blank? ? '' : s.due_date.strftime('%Y-%m-%d')}
+    assert_equal ['', '2011-12-08', '2011-12-09', '2011-12-10'], assigns(:sticky).group.stickies.where("stickies.id != ?", assigns(:sticky).to_param).where(completed: false).order('due_date').collect{|s| s.due_date.blank? ? '' : s.due_date.strftime('%Y-%m-%d')}
     assert_redirected_to calendar_stickies_path(selected_date: assigns(:sticky).due_date.blank? ? '' : assigns(:sticky).due_date.strftime('%m/%d/%Y'))
   end
 
@@ -264,7 +264,7 @@ class StickiesControllerTest < ActionController::TestCase
     put :update, id: stickies(:grouped_one).to_param, from_calendar: 1, sticky: { description: "Shifting sticky forward 5 days", project_id: stickies(:grouped_one).project_id, frame_id: stickies(:grouped_one).frame_id, completed: '0', due_date: "12/06/2011" }, shift: 'all'
     assert_not_nil assigns(:sticky)
     assert_equal Date.strptime('12/06/2011', '%m/%d/%Y'), assigns(:sticky).due_date
-    assert_equal ['2011-12-07', '2011-12-08', '2011-12-09', '2011-12-10'], assigns(:sticky).group.stickies.where("stickies.id != ?", assigns(:sticky).to_param).order('due_date').collect{|s| s.due_date.strftime('%Y-%m-%d')}
+    assert_equal ['', '2011-12-07', '2011-12-08', '2011-12-09', '2011-12-10'], assigns(:sticky).group.stickies.where("stickies.id != ?", assigns(:sticky).to_param).order('due_date').collect{|s| s.due_date.blank? ? '' : s.due_date.strftime('%Y-%m-%d')}
     assert_redirected_to calendar_stickies_path(selected_date: assigns(:sticky).due_date.blank? ? '' : assigns(:sticky).due_date.strftime('%m/%d/%Y'))
   end
 
@@ -377,7 +377,8 @@ class StickiesControllerTest < ActionController::TestCase
       delete :destroy, id: stickies(:grouped_two).to_param, discard: 'following'
     end
     assert_not_nil assigns(:sticky)
-    assert_equal 1, assigns(:sticky).group.stickies.size
+    # Two remain since a sticky without a due date wouldn't be deleted since it's not "following" or "preceding"
+    assert_equal 2, assigns(:sticky).group.stickies.size
     assert_redirected_to stickies_path
   end
 
